--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.9'
+
 services:
   web:
     build: .
@@ -8,17 +10,22 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    env_file:
+      - .env
     environment:
-      DJANGO_SECRET_KEY: dev-secret-key
-      DJANGO_DEBUG: "1"
-      DJANGO_ZARINPAL_MERCHANT_ID: test
+      - DJANGO_SECRET_KEY=${SECRET_KEY}
+      - DJANGO_DEBUG=${DEBUG}
+      - DJANGO_ZARINPAL_MERCHANT_ID=${DJANGO_ZARINPAL_MERCHANT_ID}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
 
   db:
     image: postgres:14
+    env_file:
+      - .env
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
